<resources>
    <string name="app_name">EatFL</string>
    <string-array name="type_array">
        <item>None</item>
        <item>1to2 days a week</item>
        <item>3to5 days a week</item>
        <item>6to7 days a week</item>
        <item>Athlete (All the time)</item>
    </string-array>

    <string-array name="type_time_array">
        <item>วัน</item>
        <item>สัปดาห์</item>
        <item>เดือน</item>
    </string-array>

    <string-array name="type_item_array">
        <item>g</item>
        <item>kilogram</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello Home fragment</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="register_button">Register</string>
    <string name="register">Register</string>
    <string name="login">"Login"</string>
    <string name="regis_subtext">register for the best exprerience.</string>
    <string name="headertext">Calorie to day</string>
    <string name="calShow">2020</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string name="save_money">จัดการงบ</string>
    <string name="loss_weight">ควบคุมน้ำหนัก</string>
    <string name="my_plan">แผนของฉัน</string>
    <string name="Feed">โพสต์</string>
    <string name="money">งบประมาณ</string>
    <string name="recom_food">อาหารแนะนำ</string>
    <string name="time">ระยะเวลา</string>
    <string name="เพิ่มในแผน" />
    <string name="add_to_plan">เพิ่มในแผน</string>
    <string name="amont">ปริมาณ</string>
    <string name="ProteinToday">Protein Today</string>
    <string name="planing">Current plan</string>

</resources>